tests/unit/language/errors/type_param_unsupported.arche
// `type` is well-formed grammar in a parameter slot — a parameter holding a type value (a generic
// type parameter, like Jai's `T: Type` / Odin's `$T: typeid`). But monomorphization isn't built
// yet, so it must fail loud ("not supported yet") rather than silently miscompile to i32.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "type parameters (generics) are not supported yet" %t.out
#import { fmt }
foo :: proc(bar: type) {
  fmt.printf("unreachable\n");
}

main :: proc() {
  fmt.printf("hi\n");
}
